<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actualizarContrasena">
    <include layout="@layout/toolbar" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="223dp"
        android:layout_height="0dp"
        android:layout_marginBottom="114dp"
        android:layout_marginEnd="31dp"
        android:layout_marginRight="31dp"
        android:onClick="actualizarContraseña"
        android:text="@string/actualizarContraseña"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etNuevaContraseniaC"
        app:layout_constraintTop_toBottomOf="@+id/etNuevaContraseniaC" />

    <EditText
        android:id="@+id/etNuevaContrasenia"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="53dp"
        android:layout_marginLeft="53dp"
        android:layout_marginRight="53dp"
        android:layout_marginStart="53dp"
        android:ems="10"
        android:hint="@string/contraseñaNueva"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />

    <EditText
        android:id="@+id/etNuevaContraseniaC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="45dp"
        android:layout_marginEnd="47dp"
        android:layout_marginLeft="47dp"
        android:layout_marginRight="47dp"
        android:layout_marginStart="47dp"
        android:ems="10"
        android:hint="@string/contraseñaNueva"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btnActualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginStart="52dp"
        android:ems="10"
        android:hint="@string/contraseñaActual"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="141dp"
        android:layout_height="105dp"
        android:layout_marginBottom="31dp"
        android:layout_marginLeft="124dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="73dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/verifiqueNContrasenia"
        android:textColor="#5DADE2"
        app:layout_constraintBottom_toTopOf="@+id/etNuevaContraseniaC"
        app:layout_constraintStart_toStartOf="@+id/etNuevaContraseniaC"
        app:layout_constraintTop_toBottomOf="@+id/etNuevaContrasenia" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/ingreseContrasenia"
        android:textColor="#5DADE2"
        app:layout_constraintBottom_toTopOf="@+id/etContraseña"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintStart_toStartOf="@+id/imageView6"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/ingreseNuevaContrasenia"
        android:textColor="#5DADE2"
        app:layout_constraintBottom_toTopOf="@+id/etNuevaContrasenia"
        app:layout_constraintStart_toStartOf="@+id/etContraseña"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña" />

</androidx.constraintlayout.widget.ConstraintLayout>