<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reportarSismo">

    <Button
        android:id="@+id/btnReportar"
        android:layout_width="134dp"
        android:layout_height="43dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="131dp"
        android:layout_marginLeft="146dp"
        android:layout_marginRight="131dp"
        android:layout_marginStart="146dp"
        android:layout_marginTop="613dp"
        android:onClick="reportarSismo"
        android:text="@string/btnReportar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnFacebook"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginBottom="33dp"
        android:layout_marginEnd="256dp"
        android:layout_marginLeft="128dp"
        android:layout_marginRight="256dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="673dp"
        android:onClick="compartirFacebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_fabebook_foreground" />

    <ImageButton
        android:id="@+id/btnWhatsApp"
        android:layout_width="28dp"
        android:layout_height="23dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="217dp"
        android:layout_marginLeft="168dp"
        android:layout_marginRight="217dp"
        android:layout_marginStart="168dp"
        android:layout_marginTop="673dp"
        android:onClick="compartirWhatsApp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_whatsapp_foreground" />

    <ImageButton
        android:id="@+id/btnTwitter"
        android:layout_width="27dp"
        android:layout_height="25dp"
        android:layout_marginBottom="34dp"
        android:layout_marginLeft="210dp"
        android:layout_marginStart="210dp"
        android:layout_marginTop="672dp"
        android:onClick="compartirTwitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_twitter_foreground" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="73dp"
        android:layout_height="46dp"
        android:layout_marginBottom="618dp"
        android:layout_marginEnd="160dp"
        android:layout_marginLeft="178dp"
        android:layout_marginRight="160dp"
        android:layout_marginStart="178dp"
        android:layout_marginTop="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="357dp"
        android:layout_height="36dp"
        android:layout_marginBottom="329dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="366dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="364dp"
        android:layout_height="33dp"
        android:layout_marginBottom="419dp"
        android:layout_marginEnd="21dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="21dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="279dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="112dp"
        android:layout_height="26dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="289dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="289dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="672dp"
        android:text="@string/compartir"
        android:textColor="#5DADE2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvHoraLocal"
        android:layout_width="89dp"
        android:layout_height="20dp"
        android:layout_marginBottom="582dp"
        android:layout_marginEnd="211dp"
        android:layout_marginLeft="111dp"
        android:layout_marginRight="211dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="129dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="78dp"
        android:layout_height="49dp"
        android:layout_marginBottom="511dp"
        android:layout_marginEnd="310dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="310dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="171dp"
        android:text="@string/ciudadMasCercana"
        android:textColor="#5DADE2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="180dp"
        android:layout_height="26dp"
        android:layout_marginBottom="465dp"
        android:layout_marginEnd="208dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="208dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="240dp"
        android:text="@string/comentario"
        android:textColor="#5DADE2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="120dp"
        android:layout_height="25dp"
        android:layout_marginBottom="291dp"
        android:layout_marginEnd="265dp"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="265dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="415dp"
        android:text="@string/ubicacion"
        android:textColor="#5DADE2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="583dp"
        android:layout_marginEnd="322dp"
        android:layout_marginLeft="23dp"
        android:layout_marginRight="322dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="129dp"
        android:text="@string/horaLocal"
        android:textColor="#5DADE2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="582dp"
        android:layout_marginEnd="129dp"
        android:layout_marginLeft="218dp"
        android:layout_marginRight="129dp"
        android:layout_marginStart="218dp"
        android:layout_marginTop="130dp"
        android:text="@string/magnitud"
        android:textColor="#5DADE2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMagnitud"
        android:layout_width="99dp"
        android:layout_height="23dp"
        android:layout_marginBottom="578dp"
        android:layout_marginLeft="296dp"
        android:layout_marginStart="296dp"
        android:layout_marginTop="130dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="357dp"
        android:layout_height="31dp"
        android:layout_marginBottom="376dp"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="324dp"
        android:text="@string/edificio"
        android:textColor="#5DADE2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCiudadMasCercana"
        android:layout_width="275dp"
        android:layout_height="45dp"
        android:layout_marginBottom="515dp"
        android:layout_marginEnd="25dp"
        android:layout_marginLeft="111dp"
        android:layout_marginRight="25dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="171dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <fragment
        android:id="@+id/maps"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="348dp"
        android:layout_height="157dp"
        android:layout_marginBottom="134dp"
        android:layout_marginEnd="34dp"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="34dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="440dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <include layout="@layout/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>